--- a/sign-in.html
+++ b/sign-in.html
@@ -19,7 +19,7 @@
                 <input type="password" class="in" name="password" id="password">
             </div>
             <button type="submit" class="in-btn">Sign Up</button>
-<label for="">do not have an account? <a href="index.html">Sign Up</a></label>
+<label for="">do not have an account? <a href="index.html">Sign In</a></label>
         </form>
     </div>
 </body>
