--- a/sign-in.html
+++ b/sign-in.html
@@ -18,8 +18,8 @@
                 <label for="password">Password:</label>
                 <input type="password" class="in" name="password" id="password">
             </div>
-            <button type="submit" class="in-btn">Sign Up</button>
-<label for="">do not have an account? <a href="index.html">Sign In</a></label>
+            <button type="submit" class="in-btn">Sign In</button>
+<label for="">do not have an account? <a href="index.html">Sign Up</a></label>
         </form>
     </div>
 </body>
